Revision history for perl distribution Mojo-Server-DaemonControl

0.03 Not Released
 - Add support for config from environment variables

0.02 2022-03-26T10:47:29+0900
 - Force stop worker if parent pid changes

0.01 2022-03-21T17:31:19+0900
 - Add "mojodctl" manager program
 - Add custom "daemon" worker class
 - Add support for hot deploy (USR2)
 - Add support for inc- and decreasing workers (TTIN/TTOU)
 - Add heartbeat channel using a unix socket
 - Add test for checking load balancing using reuse=1